--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -67,4 +67,14 @@
         android:layout_marginStart="16dp"
         android:text="@string/crime_report_text"/>
 
+    <Button
+        android:id="@+id/crime_suspect_call"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/call_the_suspect"/>
+
 </LinearLayout>
