Chapter 8 of 3rd edition, completed the task.

--- a/app/src/main/res/layout/view_camera_and_title.xml
+++ b/app/src/main/res/layout/view_camera_and_title.xml
@@ -50,6 +50,13 @@
             android:layout_marginRight="16dp"
             android:hint="@string/crime_title_hint"/>
 
+        <CheckBox
+            android:id="@+id/requires_police_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/call_police_label"/>
+
     </LinearLayout>
 
 </LinearLayout>
