--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -15,6 +15,11 @@
             style="?android:listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="12dp"
             android:text="@string/crime_details_label"/>
 
         <LinearLayout
@@ -27,35 +32,83 @@
             android:layout_marginStart="16dp"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/crime_date"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_weight="2"/>
+                android:orientation="vertical"
+                android:layout_weight="2">
 
-            <Button
-                android:id="@+id/crime_time"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp"
+                    android:labelFor="@+id/crime_date"
+                    android:padding="4dp"
+                    android:text="@string/date_picker_label"/>
+
+                <Button
+                    android:id="@+id/crime_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_weight="2"/>
+                android:orientation="vertical"
+                android:layout_weight="2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp"
+                    android:labelFor="@+id/crime_time"
+                    android:padding="4dp"
+                    android:text="@string/time_picker_label"/>
+
+                <Button
+                    android:id="@+id/crime_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"/>
+
+            </LinearLayout>
 
             <CheckBox
                 android:id="@+id/crime_solved"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="bottom"
                 android:layout_marginEnd="16dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="1"
                 android:text="@string/crime_solved_label"/>
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:padding="4dp"
+            android:text="@string/crime_suspect_and_actions_label"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,7 +127,8 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:text="@string/crime_suspect_text"/>
+                android:text="@string/crime_suspect_text"
+                android:contentDescription="@string/crime_suspect_text"/>
 
             <Button
                 android:id="@+id/crime_report"
