--- a/app/src/main/res/layout/list_item_crime.xml
+++ b/app/src/main/res/layout/list_item_crime.xml
@@ -2,8 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
+                                             android:id="@+id/crime_item_container"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
+                                             android:focusable="true"
                                              tools:layout_editor_absoluteX="0dp"
                                              tools:layout_editor_absoluteY="81dp">
 
