--- a/app/src/main/res/layout/view_camera_and_title.xml
+++ b/app/src/main/res/layout/view_camera_and_title.xml
@@ -19,6 +19,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:background="@android:color/darker_gray"
+            android:contentDescription="@string/crime_photo_no_image_description"
             android:cropToPadding="true"
             android:scaleType="centerInside"/>
 
@@ -26,12 +27,13 @@
             android:id="@+id/crime_camera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/crime_photo_button_description"
             android:src="@android:drawable/ic_menu_camera"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
@@ -40,12 +42,14 @@
             style="?android:listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/crime_title_label"/>
+            android:text="@string/crime_title_label"
+            android:labelFor="@+id/crime_title"/>
 
         <EditText
             android:id="@+id/crime_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="48dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:hint="@string/crime_title_hint"/>
